# ha-termoweb-ducaheat

./: AGENTS.md  LICENSE  README.md  hacs.json  pyproject.toml
.devcontainer/: devcontainer.json
.github/ISSUE_TEMPLATE/: bug_report.yml
.github/workflows/: hassfest.yml
custom_components/: INSTALL.md
custom_components/ducaheat/: __init__.py  api.py  binary_sensor.py  button.py  climate.py  config_flow.py  const.py  coordinator.py  manifest.json  sensor.py  services.yaml  ws_client_legacy.py
custom_components/ducaheat/assets/: install_termoweb_card.sh
custom_components/ducaheat/translations/: en.json
custom_components/termoweb/: __init__.py  api.py  binary_sensor.py  button.py  climate.py  config_flow.py  const.py  coordinator.py  manifest.json  sensor.py  strings.json  ws_client_legacy.py
custom_components/termoweb/assets/: termoweb_schedule_card.js
custom_components/termoweb/translations/: en.json
docs/: termoweb_api.md  termoweb_openapi.yaml
scripts/: setup
tests/: test_api.py  test_pmo_energy_sensor.py  test_pmo_power_sensor.py
