[project]
name = "ha-termoweb"
version = "1.0.0"
description = "TermoWeb heaters integration for Home Assistant"
readme = "README.md"
authors = [{ name = "ha-termoweb" }]
requires-python = ">=3.11"
dependencies = [
    "homeassistant>=2024.1.0",
    "aiohttp>=3.9.0",
    "voluptuous>=0.13",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
